--- a/main.ipynb
+++ b/main.ipynb
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "4        5      3"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,15 +867,9 @@
     "predicted_labels = [np.argmax(prediction) for prediction in predictions]\n",
     "submission_df = pd.read_csv(\"Data/sample_submission.csv\")\n",
     "submission_df[\"Label\"] = predicted_labels\n",
+    "submission_df.to_csv(\"PersistedData/submission.csv\",index=False)\n",
     "submission_df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
